# robust-prox-nag-gs

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: compare_histories.py  distill_tuning_results.py  run_experiment.py  run_method_suite.py  run_mnist_method_suite.py  run_theory_verification.py  tune_robust_proxnaggs.py  tune_with_optuna.py
src/rpnaggs/: __init__.py  bundle_cli.py  cli.py  compare_cli.py  config.py  experiment.py  optuna_cli.py  theory_cli.py  tuning_distill.py
src/rpnaggs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/rpnaggs/algorithms/: __init__.py  base.py  baselines.py  registry.py  robust_proxnaggs.py
src/rpnaggs/data/: __init__.py  cifar10.py  mnist.py  registry.py
src/rpnaggs/diagnostics/: __init__.py  gradients.py  tails.py
src/rpnaggs/experiments/: __init__.py  runner.py
src/rpnaggs/experiments/theory/: __init__.py  config.py  io.py  plots.py  runner.py  suites.py
src/rpnaggs/models/: __init__.py  registry.py  small_cnn.py  vgg7_mini.py
src/rpnaggs/optim/: __init__.py  prox.py  transforms.py
src/rpnaggs/problems/: __init__.py  data_generators.py  finite_sum_least_squares.py  lasso.py  reference_solvers.py
src/rpnaggs/theory/: __init__.py  lyapunov.py  metrics.py
src/rpnaggs/theory/solvers/: __init__.py  prox_nag_gs.py  registry.py  sgd.py
src/rpnaggs/utils/: repro.py
tests/: test_mnist_model.py  test_prox.py  test_registry.py  test_robust_proxnaggs.py  test_theory_verification.py  test_transforms.py
